@@ -1,4 +1,4 @@
-/* Copyright (C) 2002 Free Software Foundation, Inc.
+/* Copyright (C) 2002, 2003 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -48,14 +48,19 @@ extern int sem_close (sem_t *__sem) __THROW;
 /* Remove named semaphore NAME.  */
 extern int sem_unlink (__const char *__name) __THROW;
 
-/* Wait for SEM being posted.  */
-extern int sem_wait (sem_t *__sem) __THROW;
+/* Wait for SEM being posted.
+
+   This function is a cancellation point and therefore not marked with
+   __THROW.  */
+extern int sem_wait (sem_t *__sem);
 
 #ifdef __USE_XOPEN2K
-/* Similar to `sem_wait' but wait only until ABSTIME.  */
+/* Similar to `sem_wait' but wait only until ABSTIME.
+
+   This function is a cancellation point and therefore not marked with
+   __THROW.  */
 extern int sem_timedwait (sem_t *__restrict __sem,
-			  __const struct timespec *__restrict __abstime)
-     __THROW;
+			  __const struct timespec *__restrict __abstime);
 #endif
 
 /* Test whether SEM is posted.  */
